--- a/02_viz.Rmd
+++ b/02_viz.Rmd
@@ -9,6 +9,16 @@ output:
     theme: simplex
 ---
 
+
+
+
+## Txt
+
+* In general, people's initatives are most often refused. 
+* 
+
+
+
 ```{r setup, include=FALSE}
 
 data.file <- "data/VOTES_2017_05_30_clean.csv"
@@ -38,22 +48,22 @@ keywords <- data %>% select(starts_with("keyword")) %>% unlist() %>% table() %>%
 keywords <- keywords[-which(names(keywords) == "none")]
 
 # make data long
-datal <- data %>% select(`Number of Vote`, keyword1, keyword2, keyword3) %>%
-   gather(keyword_tmp, keyword, -`Number of Vote`) %>% select(-keyword_tmp) %>% 
-  arrange(`Number of Vote` ) %>% filter(keyword != "none")
+datal <- data %>% select(`Sl No`, keyword1, keyword2, keyword3) %>%
+   gather(keyword_tmp, keyword, -`Sl No`) %>% select(-keyword_tmp) %>% 
+  arrange(`Sl No` ) %>% filter(keyword != "none")
 
 datal <- left_join(datal, data %>% select(-contains("keyword")))
 datal %<>% mutate(tbin = cut(`Date of Votes`, breaks = "10 years")) %>%
   mutate(tbin = factor(substr(tbin, 1, 4)))
 
 # trim the whole data
-dd <- datal %>% select(`Number of Vote`, `Title in English`, keyword, tbin, `Date of Votes`, 
+dd <- datal %>% select(`Sl No`, `Number of Vote`, `Title in English`, keyword, tbin, `Date of Votes`, 
                        `Yes [%]`, `Result`, `type`, Turnout, `Number of States accepting`, `Number of States rejecting`) %>%
-  rename(voteID = `Number of Vote`, date = `Date of Votes`, yes_pc = `Yes [%]`, 
+  rename(voteID = `Sl No`, date = `Date of Votes`, yes_pc = `Yes [%]`, 
          yes_nCanton = `Number of States accepting`, no_nCanton = `Number of States rejecting`)
 
 
-# get nmax number of votes for a given keyword and time bin
+# get nmax Sl Nos for a given keyword and time bin
 count <- dd %>% group_by(keyword, tbin) %>% summarise(nmax = length(voteID)) %>% 
   ungroup() %>% arrange(desc(nmax))
 
@@ -66,7 +76,7 @@ ddd <- dd %>% arrange(date) %>%
 
 ```{r explore viz, fig.width= 12, fig.height = 16}
 # viz subset top keywords
-kw.sub <- head(keywords, 20) %>% names()
+kw.sub <- head(keywords, 40) %>% names()
 
 ggplot(data = ddd %>% filter(keyword %in% kw.sub), aes(x = tbin, y = y, fill = `yes_pc`)) + 
   geom_tile(colour = "white", size = 0.5) + swi_theme(y_gridlines = F) + 
@@ -81,29 +91,43 @@ ggplot(data = ddd %>% filter(keyword %in% kw.sub), aes(x = tbin, y = y, fill = `
 ```{r interactive small multiple}
 library(highcharter)
 
+# tmp for translation
+kws <- keywords %>% head(40)
+write.csv(data.frame(key = paste0(gsub("( |,|\\-)", "_", names(kws)), ".key"), EN = names(kws)), file = "data/tmp.csv", row.names = F)
+
 lang <- 'EN'
-
 #head(keywords, 30) %>% names()
-kw.sub
 
-bg.colour <-  "#f3f3f2"
-chart.height <- 400
+kw.sub
+ddd %>% filter(keyword %in% kw.sub) %>% 
+  summarise(max = max(yes_pc), min = min(yes_pc)) %>% ungroup()
+bg.colour <-  "white"
+chart.height <- 370
+
+# stops <- data.frame(q = c(0, 0.4999, 0.5, 1), 
+#                     c = c("#5d4622", '#e6dfd9', '#dbe1e1', "#224444"))
+
 stops <- data.frame(q = c(0, 0.4999, 0.5, 1), 
-                    c = c("#5d4622", '#e6dfd9', '#dbe1e1', "#224444"))
+                    c = c("#72302f", '#f8eded', '#dae9f1', "#193442"))
 
 cat.label <- levels(ddd$tbin)
-cat.label[-c(1, round(length(cat.label) / 4),
-             round((length(cat.label) / 4)*3), length(cat.label))] <- ""
+#cat.label[-c(1, round(length(cat.label) / 2), length(cat.label))] <- ""
+
+# add HTML break for name longer than 50 characters
+html_wrap <- function(x) {
+  gsub('(.{1,60})(\\s|$)', '\\1\\<br\\>', x)  
+}
+		
 
 
 singlePlot <- function(ddd, kw) {
   dddd <- ddd %>% filter(keyword == kw)   
   
   dddd$tp <- paste0(
-    '<table cellpadding="1" style="line-height:1.1">',
-    '<tr><td>', dddd$date, '</td>',
-    '<td></td><td>', dddd$type, '</td></tr>',
-    '<tr><td colspan="3"><i>', dddd$`Title in English`, '</i><hr></td></tr>',
+    '<table class="table">',
+    '<tr><td><b>', dddd$date, '</b></td>',
+    '<td></td><td><b>', dddd$type, '</b></td></tr>',
+    '<tr><td colspan="3">', sapply(dddd$`Title in English`, html_wrap), '<hr></td></tr>',
     '<tr><td>', "% yes", 
     #trad["tp.yes",lang], 
     ': <b>', round(dddd$yes_pc, 1), '%</b>', '</td><td></td>',
@@ -111,67 +135,73 @@ singlePlot <- function(ddd, kw) {
 		#trad["tp.turnout",lang],  
 		": ",
     ifelse(round(dddd$Turnout, 1) == 0, " ", paste0(round(dddd$Turnout, 1), "%")), '</td></tr>',
-		'<tr><td colspan="3" align="center"><div style="color:#999999">',
-		ifelse(dddd$Result == "no", "no", "yes"),
+		# ifelse(is.na(dddd$yes_nCanton), '', paste0('<tr><td colspan="3">', "Number of cantons having accepted it: ", dddd$yes_nCanton, "(out of ", as.numeric(dddd$yes_nCanton) + as.numeric(dddd$no_nCanton), ")")),
+		'<tr><td colspan="2"><div style="color:#999999">', "Outcome","</td><td>", 
+		ifelse(dddd$Result == "no", "rejected", "accepted"),
 		#trad["tp.refused",lang], trad["tp.accepted",lang]), 
 		'</td></tr>','</table>')
 
-  hc <- hchart(dddd, "heatmap", 
-               hcaes(x = tbin, y = y, value = yes_pc, tp = tp)) %>%
-    hc_colorAxis(min = 0, max  = 100, stops = list_parse2(stops)) %>%
-    hc_plotOptions(heatmap = list(borderWidth = 3, borderColor = bg.colour, 
-                                  borderRadius = 4)) %>%
-    hc_legend(enabled = F) %>%
-    hc_yAxis(gridLineWidth = 0, lineColor = 'transparent', max = max(count$nmax)-1, min = 2,
-             labels = list (enabled = F), title = "", opposite = ifelse(lang == "AR", T, F)) %>%
-    hc_xAxis(label = list(autoRotation = 0), categories = cat.label, uniqueNames = F,
-             gridLineWidth = 1,  title = "", tickLength = 2, #lineColor = 'transparent',
-             min = 0, max = nlevels(dddd$tbin)-1, reversed = ifelse(lang == "AR", T, F)) %>%
-    hc_add_theme(hc_theme_swi)
+  hc <- hchart(
+    dddd, "heatmap", hcaes(x = tbin, y = y, value = yes_pc, tp = tp)
+  ) %>%
+    hc_colorAxis(
+      min = 0, max  = 100, stops = list_parse2(stops)
+    ) %>%
+    hc_plotOptions(
+      heatmap = list(borderWidth = 3, borderColor = bg.colour, borderRadius = 2)
+    ) %>%
+  hc_legend(enabled = F) %>%
+    hc_add_theme(hc_theme_swi) %>%
+    hc_chart(
+      animation =F, backgroundColor = bg.colour, height = chart.height, 
+      spacing = list(3,15,12,15), borderRadius = 2,
+      borderColor = "#e6e6e6", borderWidth = 1
+    ) %>%
+    hc_yAxis(
+      gridLineWidth = 0, lineColor = 'transparent', min = 1, tickInterval = 1,
+      max = max(count$nmax), minPadding = 0, maxPadding = 0,
+      labels = list (enabled = F), title = "", opposite = ifelse(lang == "AR", T, F)
+    ) %>% 
+    hc_xAxis(
+      label = list(autoRotation = list(0), padding = 1, step = 2), 
+      categories = as.list(cat.label), 
+      gridLineWidth = 0,  title = "", tickLength = 4,
+      min = 0, max = nlevels(dddd$tbin)-1, reversed = ifelse(lang == "AR", T, F)
+    ) 
   
   hc2 <- hc %>% 
-    hc_add_series(dddd %>% filter(type == 'initiative'), "scatter", 
-                  hcaes(x = as.numeric(tbin)-1, y = y), 
-                  marker = list(symbol = "diamond", 
-                  radius = 4, lineWidth = 1.5), color = "#efe9e0")
+    hc_add_series(
+      dddd %>% filter(type == 'initiative'), "scatter", 
+      hcaes(x = as.numeric(tbin)-1, y = y, group = as.factor(Result)), 
+      marker = list(symbol = "diamond", radius = 3, lineWidth = 0) #, color = "#efe9e0"
+    ) %>% hc_colors(colors = c("#ffffff", "#72302f"))
   
-  hc2 %>% hc_tooltip(hideDelay = 10, formatter = JS("function() { return this.point.tp; }"), useHTML = T,
-                            borderWidth = 2, backgroundColor = 'rgba(255,255,255,0.8)', style = list(padding = 3)) %>%
-    hc_chart(backgroundColor = bg.colour, height = chart.height)
+  hc2 %>% hc_tooltip(
+    hideDelay = 10, formatter = JS("function() { return this.point.tp; }"), 
+    useHTML = T, borderWidth = 2, 
+    backgroundColor = 'rgba(255,255,255,0.8)', style = list(padding = 3)
+  ) %>%
+    hc_title(
+      floating = T, useHTML = T, text = kw, x = 0.5, y = 18,
+      style = list("fontSize" = "1.1em", "color" = '#0e1d25')
+    ) %>%
+    hc_subtitle(
+      floating = T, useHTML = T, text = "", x = 0.5, y = 40, widthAdjust = -120,
+      style = list("fontSize" = "0.95em", "color" = '#586a74')
+    )
 }
  
-plots <- lapply(kw.sub[1:12], function(kw) singlePlot(ddd, kw))
+plots <- lapply(kw.sub, function(kw) singlePlot(ddd, kw))
 #hw_grid(plots, ncol = 4, rowheight = chart.height + 10)%>% browsable()
-
-
 
 save_html(
    tags$html(
     tags$head(includeHTML(style_swi_highcharter())),
-    div(class="graphic", hw_grid(plots, ncol = 3, rowheight = chart.height + 1)),#,
+    div(class="graphic", hw_grid(plots, ncol = 3, rowheight = chart.height)),#,
     #div(id = "cite", HTML(footer)),
     HTML(iframeresizer)  
-  ), #background = "#EDEDED", 
-  file =  paste0("chVotes_byKeyword2_", lang, ".html"), libdir = "js")
-
-# save_html(
-#    tags$html(
-#  #     tags$head(includeHTML("styles.html")),
-#   fluidPage(
-#    # tags$h2(HTML("Différences de salaire par type de professsion et par âge")), #txt["main.title", lang]),
-#  #   div(class = "descr", HTML("Salaires moyens par tranches d'âge et professions en fonction du salaire moyen à moins de 30 ans")),
-#     #tags$h4(txt["h3", lang]),
-#     div(class="graphic", 
-#         fluidRow(lapply(1:length(plots), function(i) {
-#           column(3, div(class = "graphic",  plots[[i]]))
-#         }))#,
-#         #div(id = "cite", HTML(footer))
-#     ),
-#     HTML(iframeresizer)  
-#   )), #background = "#EDEDED", 
-#   file =  paste0("chVotes_byKeyword_", lang, ".html"), libdir = "js")
-  
-
+  ), background = "#f2f2f2", 
+  file =  paste0("chVotes_byKeyword_", lang, ".html"), libdir = "js")
 
 
 ```
@@ -217,8 +247,12 @@ hc <- hchart(dddd, "heatmap",
 
 hc2 <- hc %>% hc_add_series(dddd %>% filter(type == 'initiative'), "scatter", hcaes(x = as.numeric(tbin)-1, y = y), marker = list(symbol = "diamond", radius = 4, lineWidth = 1.5), color = "#efe9e0")
 
-hc3 <- hc2 %>% hc_tooltip(formatter = JS("function() { return this.point.tp; }"), useHTML = T,
-			borderWidth = 2, backgroundColor = 'rgba(255,255,255,0.8)', style = list(padding = 3)) %>%
+# max width tooltip and wrap text https://stackoverflow.com/questions/21435021/highcharts-tooltip-html-max-width
+hc3 <- hc2 %>% hc_tooltip(
+  formatter = JS("function() { return this.point.tp; }"), useHTML = T,
+			borderWidth = 2, backgroundColor = 'rgba(255,255,255,0.8)', 
+  style = list(padding = 3)
+) %>%
   hc_chart(backgroundColor = bg.colour)
 
 # hc4 <- hc3 %>% hc_add_annotation(
