--- a/02_viz.Rmd
+++ b/02_viz.Rmd
@@ -8,26 +8,56 @@ output:
     toc_depth: 3
     theme: simplex
 ---
+## ToDo
+
+However themes do not tell whether increase or decrease 
+
 
 ## Translation
 
+***CHECK**
 **vote names are matched according to their "Sl No"**
 
 
 ## Txt
 
-Since 1848, Swiss had their say over 600 nationwide ballots. swissinfo.ch looked
+#### Environement, foreigners, woman status
+##### 
+
+*Since 1848, Swiss had their say over 600 nationwide ballots. Are there themes that have recently beenmore popular? Here is visual summary spanning over 170 years of Swiss polls*
 
 
-Nearly half of the states in the world have some form of direct legislation. But Switzerland stands alone in how extensively it uses it. In most part of the world, referendums and initiatives remain rare. But Swiss go to polls for national votes about four times a year. To give their verdict on? swissinfo.ch looked at the ballot themes since 184 
+Nearly half of the states in the world have some form of direct legislation. But Switzerland stands alone in how extensively it uses it. Swiss go to polls about four times a year for national votes. But to give their say on what topic? swissinfo.ch looked at allballots' themes since Switzerland's first constitution in 1848.
+
+We used for that data compiled by the Centre for Research on Direct Democracy which tagged all nationwide ballots in Switzerland (over 600) with keyword themes. Each ballot got assigned between 1 to 3 theme. Here is under a graphic showing the frequency of all themes: 
+
+GRAPHIC
+
+However, such theme wordcloud do not tell us anything about the ballots' outcome nor how these themes evolved over time. 
+
+A more complete view is offered under, showing the detailed ballots over time by theme. Please note that there are three different types of votes represented in this graphic:
+
+* Mandatory referendums (since 1848): In the case of a change, however small, to the constitution by parliament, the people must have their say. The same goes for membership in collective security organisations or supranational communities, and in the adoption of laws that have been declared urgent.
+* Optional referendums: (since 1875): Swiss citizens can also contest all laws adopted or modified by parliament. For an “optional referendum” vote to take place, at least 50,000 signatures from citizens must be filed.
+* People's initiatives: (since 1893): People’s initiatives allow citizens to propose changes to the constitution by introducing new provisions, or by amending or repealing existing provisions. For an initiative to be submitted for a verdict at the polls, its proponents must gather at least 100,000 signatures from citizens eligible to vote.
+
+In general, people's initatives are much more often refused than referendums. About 90% of all People's initiatives have been rejected by Swiss citizens, while over 70% of mandatory Referendums have been accepted.
+
+(illustrated here) https://www.swissinfo.ch/directdemocracy/explore-600-national-votes_how-direct-democracy-has-grown-over-the-decades/41481992) 
 
 
+GRAPHIC 
 
 
 
 ## Snippets
 
-Switzerland‟s first constitution of 1848 followed the principle of representation. It contained only two direct-democratic rights: the mandatory constitutional referendum and the popular ini- tiative for a complete revision of the federal constitution. The other popular rights were introduced gradually in a process which took many years. We have to consider them as concessions which the political elite had to make to opposition forces.
+Switzerland‟s first constitution of 1848 followed the principle of representation. It contained only two direct-democratic rights: the mandatory constitutional referendum and the popular initiative for a complete revision of the federal constitution. The other popular rights were introduced gradually in a process which took many years. We have to consider them as concessions which the political elite had to make to opposition forces.
+
+
+De 1848  à 1875, il n’y a eu que des « référendums obligatoires » prévus par la constitution sur les sujets les plus importants définies par celle-ci. Pour qu’un texte voté par le parlement soit adopté sur certains sujets, il faut une majorité simple des citoyens plus une majorité des cantons (25 cantons jusqu’en 1978 ; 26  depuis la création du canton du Jura).
+
+En 1875, fut introduit le « référendum facultatif ». Par une pétition de 50 000 signatures contre une loi votée par le parlement, des citoyens peuvent déclencher un référendum contre cette loi. La majorité simple des votants décide si la loi est adoptée ou rejetée par le peuple. Ce dispositif donne au peuple un droit de veto contre les textes votés par le parlement. C’est un « frein » contre les modifications de la loi non souhaitées par le peuple.
 
 
 
@@ -35,13 +65,22 @@ basic distinction is made between popular initiatives and ref- erendums.
 
 The referendum, on the other hand, allows parliamentary decisions which have already been taken to be struck down or modified.8 Referendums can be subdivided into those which are obligatory and those which are facultative i.e. optional. Obligatory referen- dums relate to issues which must be submitted to a popular vote i.e. where no popular request is required. A facultative referendum only comes to a vote if a proportion of the voters (50,000) has demanded it. The referendum is a means whereby important state decisions are made subject to popular approval
 
+### Related
+
+* [Video explainer](https://www.swissinfo.ch/directdemocracy/direct-democracy_what-s-a-people-s-or-citizens--initiative-/41229350)
+* [Glossary](https://www.swissinfo.ch/directdemocracy/direct-democracy-glossary/40515752)
+* [data](https://www.swissinfo.ch/directdemocracy/explore-600-national-votes_how-direct-democracy-has-grown-over-the-decades/41481992)
+
+
+### Links
 
 * In general, people's initatives are most often refused. 
 * 
 
 * [emocratic Infrastructures in the Service of Citizens’ Rights: the Swiss Experience](http://www.liechtenstein-institut.li/contortionist/0/contortionistUniverses/397/rsc/Publikation_downloadLink/LIAP_013.pdf)
 * [L’agriculture et la démocratie directe](http://arretsurinfo.ch/lagriculture-et-la-democratie-directe-33/)
-
+* [wikipedia Voting in Switzerland](https://en.wikipedia.org/wiki/Voting_in_Switzerland)
+* [Principaux référendums en Suisse depuis 1948 au niveau national (fédéral)](http://www.democratiedirecte.fr/2009/12/principaux-referendums-en-suisse-depuis-1948-au-niveau-national-federal/)
 
 ```{r setup, include=FALSE}
 exploreData <- F
@@ -126,6 +165,9 @@ txt <- loadTranslation(translation.file)
 # viz subset top keywords
 kw.sub <- head(keywords, 40) %>% names()
 
+data %>% group_by(type) %>% summarise(pc_approved = sum(Result == "yes") / length(Result)) %>% ungroup()
+
+
 if(exploreData) {
   ggplot(data = ddd %>% filter(keyword %in% kw.sub), aes(x = tbin, y = y, fill = `yes_pc`)) + 
     geom_tile(colour = "white", size = 0.5) + swi_theme(y_gridlines = F) + 
@@ -140,7 +182,7 @@ if(exploreData) {
 # chart settings
 bg.colour <-  "#f7f5ed" 
 chart.area.bg <- "white"
-chart.height <- 370
+chart.height <- 340
 
 # tmp for translation
 # kws <- keywords %>% head(40)
@@ -156,12 +198,16 @@ stops <- data.frame(q = c(0, 0.4999, 0.5, 1),
 cat.label <- levels(ddd$tbin)
 
 # add HTML break for name longer than 50 characters
-html_wrap <- function(x, width = 60, linebreak = "<br>") {
+html_wrap <- function(x, width = 55, linebreak = "<br>") {
   paste0(strwrap(x, width=width), collapse = linebreak)
 }
 		
 singlePlot <- function(ddd, kw, lang = 'EN') {
   dddd <- ddd %>% filter(keyword == kw)   
+  
+  max.x <- nlevels(dddd$tbin)-1
+  max.y <- dddd %>% group_by(tbin) %>% summarise(max.y = max(y)) %>% 
+    ungroup() 
   
   # get translation
   vtype <- dddd$type 
@@ -170,7 +216,6 @@ singlePlot <- function(ddd, kw, lang = 'EN') {
      vtype == 'mandatory Referendum' ~ txt['title.mandatoryReferendum', lang],
      vtype == 'facultative Referendum' ~ txt['title.facultativeReferendum', lang]
   )
-  
   dddd$title <- sapply(vote.title[match(dddd$voteID, rownames(vote.title)), lang], html_wrap)
   
   dddd$tp <- paste0(
@@ -184,7 +229,7 @@ singlePlot <- function(ddd, kw, lang = 'EN') {
     ifelse(round(dddd$Turnout, 1) == 0, "", paste0(txt["tp.turnout",lang], ": ", round(dddd$Turnout, 1), "%")), 
     '</td></tr>',
 		'<tr><td colspan="2">', txt['tp.outcome', lang], "</td><td>", 
-		ifelse(dddd$Result == "no", txt["tp.refused",lang], txt["tp.accepted",lang]),
+		ifelse(dddd$Result == "no", txt["tp.refused",lang], paste0("<b>", txt["tp.accepted",lang], "</b>")),
 		'</td></tr>','</table>')
 
   hc <- hchart(
@@ -194,7 +239,8 @@ singlePlot <- function(ddd, kw, lang = 'EN') {
       min = 0, max  = 100, stops = list_parse2(stops)
     ) %>%
     hc_plotOptions(
-      heatmap = list(borderWidth = 3, borderColor = bg.colour, borderRadius = 2)
+      heatmap = list(borderWidth = 3, borderColor = bg.colour, borderRadius = 2,
+                     states = list(hover = list(color = "black")))
     ) %>%
   hc_legend(enabled = F) %>%
     hc_add_theme(hc_theme_swi) %>%
@@ -212,7 +258,7 @@ singlePlot <- function(ddd, kw, lang = 'EN') {
       label = list(autoRotation = list(0), padding = 1, step = 2), 
       categories = as.list(cat.label), 
       gridLineWidth = 0,  title = "", tickLength = 4,
-      min = 0, max = nlevels(dddd$tbin)-1, reversed = ifelse(lang == "AR", T, F)
+      min = 0, max = max.x, reversed = ifelse(lang == "AR", T, F)
     ) 
   
   hc2 <- hc %>% 
@@ -224,20 +270,22 @@ singlePlot <- function(ddd, kw, lang = 'EN') {
   
   hc3 <- hc2 %>% hc_tooltip(
     hideDelay = 10, formatter = JS("function() { return this.point.tp; }"), 
-    useHTML = T, borderWidth = 3, 
-    backgroundColor = 'rgba(255,255,255,1)', style = list(padding = 3)
+    useHTML = T, borderWidth = 1, 
+    backgroundColor = 'rgba(255,255,255,1)', style = list(padding = 3, fontSize = "0.7em")
   ) %>%
     hc_title(
       floating = T, useHTML = T, text = txt[paste0(kw, ".key"), lang], x = 2, y = 19,
-      style = list("fontSize" = "1.1em", "color" = '#0e1d25')
+      style = list("fontSize" = "1.05em", "color" = '#505c62')
     ) 
   
-  hc3 %>%
-    hc_subtitle(
-      floating = T, useHTML = T, text = txt[paste0(kw, ".sub"), lang], 
-      x = 2, y = 45, widthAdjust = -110,
-      style = list("fontSize" = "0.95em", "color" = '#586a74'  )
-    )
+  if(!is.na(txt[paste0(kw, ".sub"), lang])) {
+    hc3 <- hc3 %>% hc_subtitle(
+      floating = T, useHTML = ifelse(lang == "AR", T, F), text = txt[paste0(kw, ".sub"), lang], 
+      x = 2, y = 45, widthAdjust = ifelse(max(max.y$max.y) < 9, -2, -100 * (1-which.max(max.y$max.y) /  max.x)), 
+      style = list("fontSize" = ifelse(lang == "AR", "0.95em", "1.1em"), "color" = "#1a1a1a")
+    )  
+  } 
+  hc3
 }
 
 if(exploreData) {
@@ -266,6 +314,7 @@ if(exploreData) {
 ```
 
 ```{r interactive small multiple - PRODUCTION}
+
 for(lang in colnames(txt)) {
   cat("\n", lang)
   
@@ -281,7 +330,7 @@ for(lang in colnames(txt)) {
     tags$html(
       tags$head(includeHTML(style_swi_highcharter()), includeCSS(shapes.path)),
       tags$h2(HTML(txt['main.title', lang])),
-      div(class = "descr", HTML(txt['descr', lang])),
+      div(class = "descr", HTML(paste0('<img src="https://interactive.swissinfo.ch/assets/Interactive_icon.svg.png" width="15" align="top">&nbsp; ', txt['descr', lang]))),
       div(class = "graphic", hw_grid(plots, ncol = 3, rowheight = chart.height)),
       div(id = "cite", HTML(source)),
       # div(class = "footer", HTML(txt['footer', lang])),
@@ -300,7 +349,7 @@ kwf <- data %>% select(starts_with("keyword")) %>% unlist() %>% table() %>% sort
 kwf <- kwf[-which(names(kwf) == "none")]
 
 
-wc <- d3wordcloud(names(kwf), kwf, colors=sample(swi_col, length(kwf), T) , tooltip = T, 
+wc <- d3wordcloud(names(kwf), kwf, colors=sample(swi_col[-c(1, length(swi_col))], length(kwf), T) , tooltip = T, padding = 1,
                   spiral = "rectangular", rotate.min = -30, rotate.max = 0, height=470,  font = "Open Sans")
 
 wc$sizingPolicy$defaultWidth <- "100%"
@@ -316,12 +365,12 @@ lang <- 'EN'
     tags$html(
       tags$head(includeHTML("styles.html")),
       tags$body(    
-        h2(HTML("What are the most common themes in Switzerland's federal ballot?")),
-        # div(class = "descr", HTML("The most common words present in watch brands' press releases for Baselworld 2017. 137 press releases were analysed, only the words encountered more than 20 times are shown below. Words are sized according to their frequency. Hover over a term to see its count.")),
+        h2(HTML(txt['main.title2', lang])),
+        div(class = "descr", HTML(txt['descr2', lang])),
         div(class="graphic", wc),
         div(id = "cite", HTML(source)),
         HTML(iframeresizer)
-      )), file = paste0("keyword_worldcloud_", lang, ".html"), libdir = "js")  
+      )), file = paste0("keyword_worldcloud_", lang, ".html"), libdir = "js", background = "#060d13")  
   
   
 ```
