--- a/02_viz.Rmd
+++ b/02_viz.Rmd
@@ -81,6 +81,7 @@ The referendum, on the other hand, allows parliamentary decisions which have alr
 
 ```{r setup, include=FALSE}
 exploreData <- F
+wordcloud_topN <- 50
 
 keyw.sub <- c('Environmental_policy', 'Immigration_policy', 'Status_of_women', 
               'Fundamental_rights', 'Pension_insurance', 'Indirect_taxation', 
@@ -191,7 +192,7 @@ lang <- 'EN'
 ddd %>% filter(keyword %in% kw.sub) %>% 
   summarise(max = max(yes_pc), min = min(yes_pc)) %>% ungroup()
 stops <- data.frame(q = c(0, 0.4999, 0.5, 1), 
-                    c = c("#72302f", '#f8eded', '#dae9f1', "#193442"))
+                    c = c("#481e1e", '#f1dada', '#c8deea', "#152c37"))
 cat.label <- levels(ddd$tbin)
 
 # add HTML break for name longer than 50 characters
@@ -242,7 +243,7 @@ singlePlot <- function(ddd, kw, lang = 'EN') {
   hc_legend(enabled = F) %>%
     hc_add_theme(hc_theme_swi) %>%
     hc_chart(
-      animation =F, backgroundColor = bg.colour, height = chart.height, 
+      animation = F, backgroundColor = bg.colour, height = chart.height, 
       spacing = list(5,12,9,9), borderRadius = 2,
       borderColor = "white", borderWidth = 3
     ) %>%
@@ -272,14 +273,14 @@ singlePlot <- function(ddd, kw, lang = 'EN') {
   ) %>%
     hc_title(
       floating = T, useHTML = T, text = txt[paste0(kw, ".key"), lang], x = 2, y = 19,
-      style = list("fontSize" = "1.05em", "color" = '#505c62')
+      style = list("fontSize" = "1.05em", "color" = '#454f54')
     ) 
   
   if(!is.na(txt[paste0(kw, ".sub"), lang])) {
     hc3 <- hc3 %>% hc_subtitle(
       floating = T, useHTML = ifelse(lang == "AR", T, F), text = txt[paste0(kw, ".sub"), lang], 
       x = 2, y = 45, widthAdjust = ifelse(max(max.y$max.y) < 9, -2, -100 * (1-which.max(max.y$max.y) /  max.x)), 
-      style = list("fontSize" = ifelse(lang == "AR", "0.95em", "1.1em"), "color" = "#1a1a1a")
+      style = list("fontSize" = ifelse(lang == "AR", "0.95em", "1.1em"), "color" = "#0d0d0d")
     )  
   } 
   hc3
@@ -344,16 +345,19 @@ for(lang in colnames(txt)) {
 library(d3wordcloud)
 
 kwf <- data %>% select(starts_with("keyword")) %>% unlist() %>% table() %>% sort(decreasing = T)
-kwf <- kwf[-which(names(kwf) == "none" | kwf <= 7)]
+kwf <- kwf[-which(names(kwf) == "none" )]
+kwf <- kwf[which(kwf >= kwf[wordcloud_topN] )]
+length(kwf)
 
 
 wc <- d3wordcloud(names(kwf), kwf, 
-                  colors = sample(c(swi_col[-c(1, length(swi_col))], swi_pal[1:16]), length(kwf), T) , 
-                  tooltip = T, padding = 2,
+                  colors = rev(colorRampPalette(c(swi_col[c(2,7,3,6,4,5)], '#f7f5ed'))(length(kwf))),
+                  #colors = sample(c(swi_col[-c(1, length(swi_col))]), length(kwf), T) , 
+                  tooltip = T, padding = 1,
                   spiral = "rectangular", 
                   rotate.min = -30, rotate.max = -30, 
-                  rangesizefont = c(10, 40),
-                  height=500,  font = "Open Sans")
+                  rangesizefont = c(10, 35),
+                  height = 530,  font = "Open Sans")
 
 wc$sizingPolicy$defaultWidth <- "100%"
 
